<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24dp"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="205dp"
        android:layout_height="136dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="40dp"
        app:srcCompat="@drawable/safewayapp"
        android:contentDescription="@string/logo_description" />

    <TextView
        android:id="@+id/helloTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_text"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#64B5F6"
        android:padding="12dp"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:padding="12dp"
        android:text="@string/sign_up"
        android:textColor="#64B5F6"
        android:backgroundTint="@android:color/white"
        app:strokeColor="#64B5F6"
        app:strokeWidth="2dp"
        app:cornerRadius="12dp" />



</LinearLayout>

